# metada

./: CMakeLists.txt
src/backends/: CMakeLists.txt
src/backends/common/utils/: CMakeLists.txt
src/backends/common/utils/parallel/: CMakeLists.txt  parallel_adapter.cpp  parallel_adapter.hpp
src/backends/mpi/: CMakeLists.txt
src/backends/mpi/parallel/: CMakeLists.txt  mpi_communicator.cpp  mpi_parallel.cpp  mpi_parallel.hpp  mpi_task_manager.cpp
src/backends/mpi/parallel/tests/: CMakeLists.txt  mpi_communicator_test.cpp  mpi_parallel_test.cpp  mpi_task_manager_test.cpp
src/framework/: CMakeLists.txt
src/framework/core/parallel/: CMakeLists.txt  parallel_factory.cpp  parallel_factory.hpp  parallel_interface.hpp
